--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.5",
+    "next": "^12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
@@ -18,7 +18,7 @@
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^12.1.6-canary.0",
     "typescript": "4.6.3"
   }
 }
