--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.1.5",
+    "next": "^12.1.6-canary.0",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.24",
+    "@types/node": "16.11.27",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
     "eslint": "8.13.0",
